fix lightbox media dimensions on small desktop viewport

--- a/scss/layout/_lightbox-modal.scss
+++ b/scss/layout/_lightbox-modal.scss
@@ -54,7 +54,7 @@
       display: none;
       animation-duration: 350ms;
       position: absolute;
-      max-width: 1200px;
+      max-width: 100%;
 
       &.nextMedia {
         animation-name: nextSlide;
